--- a/platform/css/style.css
+++ b/platform/css/style.css
@@ -55,7 +55,9 @@ textarea {
 	text-transform: uppercase;
 }
 
-
+a{
+    color: #f49542;
+}
 
 
 
@@ -120,7 +122,7 @@ textarea {
 */
 
 .subnavbar {
-    	margin-bottom: 2.5em;
+    	margin-bottom: 0;
     }
     
 .subnavbar-inner {
@@ -1211,6 +1213,22 @@ width: 11px;}
 .hidden{
     display: none;
 }
+.offer-controls{
+    text-align: center;
+}
+
+.offer-controls a.disabled{
+    text-decoration: none;
+    cursor: default;
+    color:darkgrey;
+}
+.right-display{
+    float: right;
+}
+
+.increased-font-size{
+    font-size: 18px;
+}
 /*------------------------------------------------------------------
 [8. Miscellaneous]
 */
@@ -1272,7 +1290,9 @@ color: #333;
 */
 
 @media (max-width: 767px) {
-    	
+    .start, .welcome{
+        margin-left:0;
+    }
 	#main {
 		padding: 0 10px;
 		margin-right: -20px;
@@ -1400,6 +1420,9 @@ color: #333;
 	.navbar .search-query {
 		width: 200px;
 	}
+    .start, .welcome{
+        margin-left:30px;
+    }
 	
 }
 
