--- a/platform/css/style.css
+++ b/platform/css/style.css
@@ -1229,6 +1229,23 @@ width: 11px;}
 .increased-font-size{
     font-size: 18px;
 }
+
+.account-details h1{
+    margin-bottom: 30px;
+}
+
+.account-details button{
+    margin-top: 20px;
+    width: 170px;
+    height: 35px;
+}
+.account-details .form-horizontal .control-label{
+    text-align: left;
+    width:90px;
+}
+.account-details .form-horizontal .controls{
+    margin-left: 0;
+}
 /*------------------------------------------------------------------
 [8. Miscellaneous]
 */
