--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ input, button {
 .cont {
   position: relative;
   height: 100%;
-  background-image: url("homepage.jpg");
+  background-image: url("homepage-sm.jpg");
   background-size: cover;
   overflow: auto;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
