--- a/platform/css/style.css
+++ b/platform/css/style.css
@@ -1300,7 +1300,7 @@ width: 11px;}
     text-align: center;
     background-color:white;
     margin-bottom:10px;
-    border-radius: 10px;
+    border-radius: 5px;
     padding-top:5px;
     padding-bottom:5px;
     -webkit-box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
@@ -1320,7 +1320,8 @@ width: 11px;}
     text-align: center;
     background-color:#f9f6f1;
     margin-bottom:20px;
-    border-radius: 10px;
+    margin-top:15px;
+    border-radius: 5px;
     padding-top:5px;
     padding-bottom:5px;
     -webkit-box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
@@ -1350,6 +1351,43 @@ width: 11px;}
 
 #myoffersList .widget{
     overflow:inherit;
+}
+
+.reactivate-offer{
+    margin-top: 15px;
+    min-width: 168px;
+}
+.about_header{
+    background: url('../img/employee-referral.jpg') no-repeat;
+    width:100%;
+    height:250px;
+    background-size: cover;
+}
+.employee_referral{
+    background: url('../img/referral.png') no-repeat;
+    width:100%;
+    height:250px;
+    background-size: contain;
+    background-position-x: 50%; 
+}
+
+.offer-page-header{
+    font-size:16px;
+    color:#666;
+}
+
+.offer-page-header-list{
+    color:#666!important;
+    font-size:14px;
+    margin-bottom:15px;
+}
+
+#background-image{
+    position: absolute;
+    left: -20px;
+    width: 200px;
+    margin-top: -23px;
+    opacity: 0.3;
 }
 /*------------------------------------------------------------------
 [8. Miscellaneous]
@@ -1565,3 +1603,9 @@ color: #333;
     }
 }
 
+@media (max-width: 410px) {
+    .about_header{
+        height: 130px!important;
+        background-size: contain!important;
+    }
+}
